Fix: Updated Overlapp

--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ body{
     width: 100%;
     z-index: -1;
     opacity: 0.7;
-    top: 12px;
+    bottom: -11px;
 }
 
 #contact_us .h-primary_center{
